--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -70,12 +70,16 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/shape"
+        android:drawableLeft="@drawable/person_24px"
+        android:drawablePadding="8dp"
+        android:drawableTint="#9F1B1B"
         android:ems="10"
         android:fontFamily="@font/dela_gothic_one"
         android:hint="EMAIL"
         android:hyphenationFrequency="normal"
         android:inputType="textEmailAddress"
-        android:textAlignment="center"
+        android:paddingLeft="10dp"
+        android:textAlignment="textStart"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textColor="#9F1B1B"
         android:textColorHighlight="#9F1B1B"
@@ -97,11 +101,15 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/shape"
+        android:drawableLeft="@drawable/password_24px"
+        android:drawablePadding="8dp"
+        android:drawableTint="#9F1B1B"
         android:ems="10"
         android:fontFamily="@font/dela_gothic_one"
         android:hint="PASSWORD"
         android:inputType="textPassword"
-        android:textAlignment="center"
+        android:paddingLeft="10dp"
+        android:textAlignment="textStart"
         android:textColor="#9F1B1B"
         android:textColorHighlight="#9F1B1B"
         android:textColorHint="#9F1B1B"
