--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -32,18 +32,16 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="121dp"
         android:layout_marginEnd="132dp"
-        android:layout_marginBottom="35dp"
         android:fontFamily="@font/dela_gothic_one"
         android:text="CREATE YOUR ACCOUNT"
         android:textColor="#FF0000"
         android:textSize="10sp"
-        app:layout_constraintBottom_toTopOf="@+id/editTextText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/signUpButton"
         android:layout_width="277dp"
         android:layout_height="50dp"
         android:layout_marginStart="67dp"
@@ -108,9 +106,9 @@
         android:layout_width="269dp"
         android:layout_height="45dp"
         android:layout_marginStart="72dp"
-        android:layout_marginTop="9dp"
+        android:layout_marginTop="54dp"
         android:layout_marginEnd="70dp"
-        android:layout_marginBottom="9dp"
+        android:layout_marginBottom="2dp"
         android:background="@drawable/shape1"
         android:drawableLeft="@drawable/mail_24px"
         android:drawablePadding="8dp"
@@ -120,27 +118,9 @@
         android:paddingLeft="10dp"
         app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextText" />
-
-    <EditText
-        android:id="@+id/editTextText"
-        style="@style/SignUpButton"
-        android:layout_width="272dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="72dp"
-        android:layout_marginTop="2dp"
-        android:layout_marginEnd="67dp"
-        android:layout_marginBottom="9dp"
-        android:drawableLeft="@drawable/person_24px"
-        android:drawablePadding="8dp"
-        android:hint="USERNAME"
-        android:paddingLeft="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <TextView
         android:id="@+id/textView3"
@@ -171,7 +151,7 @@
         android:textColor="#FF0000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
