--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -55,6 +55,7 @@
         android:drawableLeft="@drawable/password_24px"
         android:drawablePadding="8dp"
         android:ems="10"
+        android:fontFamily="sans-serif"
         android:hint="PASSWORD"
         android:inputType="textPassword"
         android:paddingLeft="10dp"
@@ -76,6 +77,7 @@
         android:drawableLeft="@drawable/password_24px"
         android:drawablePadding="8dp"
         android:ems="10"
+        android:fontFamily="sans-serif"
         android:hint="CONFIRM PASSWORD"
         android:inputType="textPassword"
         android:paddingLeft="10dp"
@@ -97,6 +99,7 @@
         android:drawableLeft="@drawable/mail_24px"
         android:drawablePadding="8dp"
         android:ems="10"
+        android:fontFamily="sans-serif"
         android:hint="EMAIL ADDRESS"
         android:inputType="textEmailAddress"
         android:paddingLeft="10dp"
@@ -116,7 +119,7 @@
         android:layout_marginEnd="67dp"
         android:layout_marginBottom="92dp"
         android:backgroundTint="#C22525"
-        android:fontFamily="@font/dela_gothic_one"
+        android:fontFamily="sans-serif-black"
         android:text="SIGN UP"
         android:textSize="10sp"
         app:cornerRadius="12dp"
