--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -61,9 +61,9 @@
         android:layout_height="wrap_content"
         android:drawableLeft="@drawable/schedule_24px"
         android:drawablePadding="10dp"
-        android:fontFamily="@font/bebas_neue"
+        android:fontFamily="sans-serif-condensed"
         android:includeFontPadding="true"
-        android:text="Time:"
+        android:text="TIME:"
         android:textAlignment="textStart"
         android:textColor="#000000"
         android:textSize="20sp"
@@ -78,12 +78,12 @@
         android:id="@+id/LocationView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingLeft="8dp"
         android:drawableLeft="@drawable/my_location_24px"
         android:drawablePadding="10dp"
-        android:fontFamily="@font/bebas_neue"
+        android:fontFamily="sans-serif-condensed"
         android:includeFontPadding="true"
-        android:text="Location:"
+        android:paddingLeft="0dp"
+        android:text="LOCATION:"
         android:textAlignment="textStart"
         android:textColor="#000000"
         android:textSize="20sp"
@@ -99,10 +99,10 @@
         android:layout_width="164dp"
         android:layout_height="116dp"
         android:backgroundTint="#D9D9D9"
-        android:fontFamily="@font/bebas_neue"
+        android:fontFamily="sans-serif"
         android:text="Activity Log"
         android:textColor="#000000"
-        android:textSize="20sp"
+        android:textSize="14sp"
         app:icon="@drawable/history_24px"
         app:iconGravity="textTop"
         app:iconPadding="10dp"
@@ -121,10 +121,10 @@
         android:layout_height="116dp"
         android:layout_marginEnd="24dp"
         android:backgroundTint="#D9D9D9"
-        android:fontFamily="@font/bebas_neue"
+        android:fontFamily="sans-serif"
         android:text="Notifications"
         android:textColor="#000000"
-        android:textSize="20sp"
+        android:textSize="14sp"
         app:icon="@drawable/notifications_24px"
         app:iconGravity="textTop"
         app:iconPadding="10dp"
@@ -141,10 +141,10 @@
         android:layout_height="116dp"
         android:layout_marginEnd="8dp"
         android:backgroundTint="#D9D9D9"
-        android:fontFamily="@font/bebas_neue"
+        android:fontFamily="sans-serif"
         android:text="HELP"
         android:textColor="#000000"
-        android:textSize="20sp"
+        android:textSize="14sp"
         app:icon="@drawable/help_24px"
         app:iconGravity="textTop"
         app:iconPadding="10dp"
@@ -163,10 +163,10 @@
         android:layout_height="116dp"
         android:layout_marginEnd="24dp"
         android:backgroundTint="#D9D9D9"
-        android:fontFamily="@font/bebas_neue"
+        android:fontFamily="sans-serif"
         android:text="SET UP"
         android:textColor="#000000"
-        android:textSize="20sp"
+        android:textSize="14sp"
         app:icon="@drawable/settings_photo_camera_24px"
         app:iconGravity="textTop"
         app:iconPadding="10dp"
