--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,7 +11,7 @@
     <!--    Password Field-->
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/textViewTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/dela_gothic_one"
@@ -26,7 +26,7 @@
         app:layout_constraintVertical_bias="0.281" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/textViewSecurity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/dela_gothic_one"
@@ -41,7 +41,7 @@
         app:layout_constraintVertical_bias="0.38" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/buttonLogIn"
         android:layout_width="224dp"
         android:layout_height="52dp"
         android:backgroundTint="#FFFFFF"
@@ -61,7 +61,7 @@
         app:layout_constraintVertical_bias="0.662" />
 
     <EditText
-        android:id="@+id/editTextTextEmailAddress5"
+        android:id="@+id/editTextEmailAddress"
         style="@style/Widget.AppCompat.AutoCompleteTextView"
         android:layout_width="310dp"
         android:layout_height="44dp"
@@ -93,7 +93,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editTextTextPassword2"
+        android:id="@+id/editTextPassword"
         android:layout_width="310dp"
         android:layout_height="44dp"
         android:layout_marginStart="16dp"
@@ -124,7 +124,7 @@
         app:layout_constraintVertical_bias="0.583" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/buttonForgotPassword"
         style="@android:style/Widget.DeviceDefault.Button.Borderless"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -140,14 +140,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2"
+        app:layout_constraintTop_toBottomOf="@+id/buttonLogIn"
         app:layout_constraintVertical_bias="0.929" />
 
 
     <!--    Make this appear so when the email and password don't match that it appears.-->
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/buttonSignUp"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
