--- a/app/src/main/res/layout/activity_accountdetails.xml
+++ b/app/src/main/res/layout/activity_accountdetails.xml
@@ -18,11 +18,12 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/person_24px" />
 
-    <ImageView
-        android:id="@+id/imageViewEmailRect"
+    <TextView
+        android:id="@+id/textViewEmailRect"
         android:layout_width="234dp"
         android:layout_height="36dp"
         android:layout_marginStart="88dp"
+        android:gravity="center"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="89dp"
         android:layout_marginBottom="270dp"
