Updated project structure. Also finished logout functionality by ensuring token clearance upon logging out. Also added API endpoint in order to connect to server to manage token validation upon logging out

--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -5,7 +5,7 @@
     android:id="@+id/root_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SignUpActivity"
+    tools:context=".userinterface.SignUpActivity"
     tools:layout_editor_absoluteX="1dp"
     tools:layout_editor_absoluteY="2dp">
 
