--- a/app/src/main/res/layout/activity_layout.xml
+++ b/app/src/main/res/layout/activity_layout.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
-    tools:context=".HomeActivity">
+    tools:context=".userinterface.HomeActivity">
 
     <FrameLayout
         android:id="@+id/fragmentContainer"
