Finished implementing functionality for changing of email and password. Also updated variable names in xml files for these.

--- a/app/src/main/res/layout/activity_changeemail.xml
+++ b/app/src/main/res/layout/activity_changeemail.xml
@@ -36,7 +36,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textViewChangeEmail" />
 
     <EditText
-        android:id="@+id/editTextTextEmailAddress"
+        android:id="@+id/newEmailAddress"
         style="@style/SignUpButton"
         android:layout_width="258dp"
         android:layout_height="42dp"
@@ -67,7 +67,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />
+        app:layout_constraintTop_toBottomOf="@+id/newEmailAddress" />
 
     <Button
         android:id="@+id/buttonBack"
