--- a/app/src/main/res/layout/activity_resetpassword.xml
+++ b/app/src/main/res/layout/activity_resetpassword.xml
@@ -36,7 +36,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textViewResetAccountPassword" />
 
     <EditText
-        android:id="@+id/editTextPassword1"
+        android:id="@+id/newPassword"
         style="@style/SignUpButton"
         android:layout_width="263dp"
         android:layout_height="45dp"
@@ -56,7 +56,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textViewEnterNewPassword" />
 
     <EditText
-        android:id="@+id/editTextPassword2"
+        android:id="@+id/confirmPassword"
         style="@style/SignUpButton"
         android:layout_width="263dp"
         android:layout_height="45dp"
@@ -73,7 +73,7 @@
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextPassword1" />
+        app:layout_constraintTop_toBottomOf="@+id/newPassword" />
 
     <Button
         android:id="@+id/buttonResetPassword"
@@ -88,7 +88,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextPassword2" />
+        app:layout_constraintTop_toBottomOf="@+id/confirmPassword" />
 
     <Button
         android:id="@+id/buttonBack"
