--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -107,14 +107,34 @@
                     android:verticalScrollbarPosition="defaultPosition">
 
 
-                    <TextView
-                        android:layout_width="308dp"
+                    <RelativeLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="8dp"
-                        android:background="@drawable/shape1"
-                        android:padding="8dp"
-                        android:text="Activity 1"
-                        android:textSize="16sp" />
+                        android:layout_marginTop="8dp">
+
+                        <TextView
+                            android:id="@+id/textView"
+                            android:layout_width="306dp"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/shape1"
+                            android:padding="8dp"
+                            android:text="Activity 1"
+                            android:textSize="16sp" />
+
+                        <Button
+                            android:id="@+id/buttonDownload"
+                            style="@style/Widget.AppCompat.Button.Borderless"
+                            android:layout_width="43dp"
+                            android:layout_height="38dp"
+                            android:layout_alignParentStart="true"
+                            android:layout_alignParentTop="true"
+                            android:layout_marginStart="249dp"
+                            android:layout_marginTop="0dp"
+                            app:icon="@drawable/download_24px"
+                            app:iconSize="30dp"
+                            app:iconTint="#000000" />
+                    </RelativeLayout>
+
 
                     <TextView
                         android:layout_width="306dp"
