Fixed email account details

--- a/app/src/main/res/layout/activity_accountdetails.xml
+++ b/app/src/main/res/layout/activity_accountdetails.xml
@@ -25,6 +25,7 @@
         android:layout_marginStart="88dp"
         android:gravity="center"
         android:layout_marginTop="12dp"
+        android:background="@drawable/shape1"
         android:layout_marginEnd="89dp"
         android:layout_marginBottom="270dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -76,18 +77,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewDetails" />
-
-    <TextView
-        android:id="@+id/textViewEmail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-condensed"
-        android:text="EMAIL"
-        android:textColor="#000000"
-        app:layout_constraintBottom_toBottomOf="@+id/imageViewEmailRect"
-        app:layout_constraintEnd_toEndOf="@+id/imageViewEmailRect"
-        app:layout_constraintStart_toStartOf="@+id/imageViewEmailRect"
-        app:layout_constraintTop_toTopOf="@+id/imageViewEmailRect" />
 
     <TextView
         android:id="@+id/textViewYour"
