--- a/app/src/main/res/layout/activity_accountdetails.xml
+++ b/app/src/main/res/layout/activity_accountdetails.xml
@@ -23,15 +23,15 @@
         android:layout_width="234dp"
         android:layout_height="36dp"
         android:layout_marginStart="88dp"
-        android:gravity="center"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="89dp"
         android:layout_marginBottom="270dp"
+        android:gravity="center"
+        android:background="@drawable/shape1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewYourEmail"
-        app:srcCompat="@drawable/shape1" />
+        app:layout_constraintTop_toBottomOf="@id/textViewYourEmail" />
 
     <TextView
         android:id="@+id/textViewAccountH"
