--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -24,8 +24,8 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
-        android:layout_width="355dp"
-        android:layout_height="196dp"
+        android:layout_width="367dp"
+        android:layout_height="176dp"
         android:layout_margin="16dp"
         android:layout_marginStart="39dp"
         android:layout_marginTop="26dp"
@@ -113,6 +113,22 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="9dp"
+        android:layout_marginBottom="9dp"
+        android:backgroundTint="#FFDDDD"
+        android:text="Button"
+        android:textColor="#000000"
+        app:icon="@drawable/download_24px"
+        app:iconTint="#000000"
+        app:layout_constraintBottom_toTopOf="@+id/cardViewLogActivity"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardView" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
